# ArTeK

./: .gitignore  README.md  TokenTypes.h  compile_commands.json  scanner.flex  token.h
2. Scanner/: Makefile  driver.cpp  scanner.flex  scanner.h  scanner.hpp  token.h  token.hpp
src/tui/: CMakeLists.txt  main.cpp  render_engine.cpp  render_engine.hpp  tui.cpp  tui.hpp  window_manager.cpp  window_manager.hpp
